--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,12 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
+  provider: ^6.1.2
+  url_launcher: ^6.3.0
+  google_fonts: ^6.2.1
+  responsive_framework: ^1.3.0
+  animations: ^2.0.7
+  flutter_svg: ^1.1.6
 
 dev_dependencies:
   flutter_test:
@@ -19,3 +25,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/images/
