--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   provider: ^6.1.2
   url_launcher: ^6.3.0
-  google_fonts: ^6.2.1
+  google_fonts: ^6.3.2
   responsive_framework: ^1.3.0
   animations: ^2.0.7
   flutter_svg: ^1.1.6
@@ -27,3 +27,4 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/images/pavan_kumar_resume.pdf
